# ssq

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: soundness.rs
