[package]
name = "ssq"
version = "0.1.0"
edition = "2021"
description = "A `#[no_std]`, single-producer, single-consumer, single-slot queue, useful for thread-safe message passing in embedded systems."
keywords = ["no_std", "message passing", "queue", "spsc"]
authors = ["Justin Beaurivage <justin@wearableavionics.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-polyfill = "1.0"

[dev-dependencies]
rand = "0.8"

[features]
enqueue_overwrite = []
